--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -33,7 +33,7 @@
   flex: 1;
   flex-direction: column;
   margin-top: 40px;
-  padding: 40px 0px;
+  padding: 0px 0px 40px 0px;
 }
 .sidebar-links::-webkit-scrollbar {
   display: none;
