--- a/views/k8s/store.html
+++ b/views/k8s/store.html
@@ -16,7 +16,7 @@
 <section class="content" ng-controller="storeController as storec">
   <div class="store-container">
     <div class="row">
-        <form class="form-inline" ng-submit="getNewStore(appstoreUrl);">
+        <form class="form-inline" style="margin: 15px 15px 0px 15px;" ng-submit="getNewStore(appstoreUrl);">
           <div class="input-group" style="width: 100%">
             <div class="input-group-addon" style="width: 50px">Store:&nbsp</div>
             <input class="form-control"id="inputUrl" ng-model="appstoreUrl" type="url" placeholder="Appstore URL" ng-required="true">
@@ -30,7 +30,7 @@
 
     <div class="row">
         <div class="col-md-12 text-center spinner" ng-hide="hideSpiner">
-          <i class="fa fa-refresh fa-spin" style="font-size:24px" ng-hide="hideSpiner"></i>
+          <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
         </div>
         <div class="col-sm-6 store-tree">
           <div ng-show="hideSpiner"
@@ -40,7 +40,9 @@
             data-node-children="children"
           ></div>
         </div>
-
+        <div class="col-sm-6 text-center spinner" ng-show="showYamlSpiner">
+          <i class="fa fa-refresh fa-spin" style="font-size:24px"></i>
+        </div>
         <div class="col-sm-6" ng-show="yaml.content">
           <div class="col-sm-12">
             <a ng-click="createRc(yaml);"><i class="btn btn-success fa fa-plus pull-right" ng-disabled="!isRC"> Create RC</i></a>
