--- a/views/header.html
+++ b/views/header.html
@@ -17,7 +17,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="nav navbar-left">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand">
             <img class="icon" src="img/icon.png"/>
             <img class="logo" src="img/logo.png"/>
           </a>
